Fixing CardView Gallery layout card overlap and container resizing (#2739)
* replacing gallery card min width with 0

width of card should be determined by the gallery layout calculated divs. Min width matches v2.

* fixing case where cards disappear when Gallery CardView width is resized to 0

turns out the row height calculatons are messed up because the total weight of the row becomes 0 giving up a NaN height from dividing by 0. This in turn breaks the visible height and y values propagated throughout the OverscanManager, Virtualizer, etc. This stops the Cards from properly reappearing when resizing the Gallery CardView back to widths greater than 0.

--- a/packages/@adobe/spectrum-css-temp/components/card/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/card/index.css
@@ -717,7 +717,7 @@ user-provided
   .spectrum-Card-grid:after {
     z-index: 2;
   }
-  min-inline-size: var(--spectrum-card-quiet-min-size);
+  min-inline-size: 0;
 
   .spectrum-Card-grid {
     block-size: 100%;
